--- a/client/react-tax-app/src/App.css
+++ b/client/react-tax-app/src/App.css
@@ -41,5 +41,13 @@
   color: #888;
 }
 
-
 /*nav bar adjust*/
+.nav-links {
+  list-style-type: none;
+  padding: 0;
+}
+
+.nav-links li {
+  display: inline;
+  margin-right: 10px;
+}
