--- a/client/react-tax-app/src/App.css
+++ b/client/react-tax-app/src/App.css
@@ -2,7 +2,8 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
+  text-align: left;
+  margin-left: 50px;  
 }
 
 .logo {
